crates/data_privacy_macros_impl/tests/snapshots/derive__redacted_debug_enum.snap
---
source: crates/data_privacy_macros_impl/tests/derive.rs
assertion_line: 64
expression: pretty
---
::core::compile_error! {
    "RedactedDebug can only be derived for structs"
}
