crates/data_privacy_macros_impl/tests/snapshots/derive__redacted_debug_multiple_named.snap
---
source: crates/data_privacy_macros_impl/tests/derive.rs
expression: pretty
---
impl ::data_privacy::RedactedDebug for EmailAddress {
    fn fmt(
        &self,
        redactor: &dyn ::data_privacy::Redactor,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        ::std::write!(f, "EmailAddress {{")?;
        ::std::write!(f, "{}{}: ", " ", "x")?;
        <String as ::data_privacy::RedactedDebug>::fmt(&self.x, redactor, f)?;
        ::std::write!(f, "{}{}: {:?}", ", ", "y", & self.y)?;
        ::std::write!(f, " }}")?;
        ::std::result::Result::Ok(())
    }
}
