crates/data_privacy_macros_impl/tests/snapshots/derive__redacted_display.snap
---
source: crates/data_privacy_macros_impl/tests/derive.rs
assertion_line: 31
expression: pretty
---
impl ::data_privacy::RedactedDisplay for EmailAddress {
    fn fmt(
        &self,
        engine: &::data_privacy::RedactionEngine,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        ::std::write!(f, "EmailAddress(")?;
        <String as ::data_privacy::RedactedDisplay>::fmt(&self.0, engine, f)?;
        ::std::write!(f, ")")?;
        ::std::result::Result::Ok(())
    }
}
