crates/data_privacy_macros_impl/tests/snapshots/derive__redacted_display_multiple.snap
---
source: crates/data_privacy_macros_impl/tests/derive.rs
expression: pretty
---
impl ::data_privacy::RedactedDisplay for EmailAddress {
    fn fmt(
        &self,
        redactor: &dyn ::data_privacy::Redactor,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        ::std::write!(f, "EmailAddress(")?;
        <String as ::data_privacy::RedactedDisplay>::fmt(&self.0, redactor, f)?;
        ::std::write!(f, ", ")?;
        ::std::write!(f, "{}", & self.1)?;
        ::std::write!(f, ")")?;
        ::std::result::Result::Ok(())
    }
}
