crates/data_privacy_macros_impl/tests/snapshots/derive__redacted_display_multiple_named.snap
---
source: crates/data_privacy_macros_impl/tests/derive.rs
expression: pretty
---
impl ::data_privacy::RedactedDisplay for EmailAddress {
    fn fmt(
        &self,
        redactor: &dyn ::data_privacy::Redactor,
        f: &mut ::std::fmt::Formatter,
    ) -> ::std::fmt::Result {
        ::std::write!(f, "EmailAddress {{")?;
        ::std::write!(f, "{}{}: ", " ", "x")?;
        <String as ::data_privacy::RedactedDisplay>::fmt(&self.x, redactor, f)?;
        ::std::write!(f, "{}{}: {}", ", ", "y", & self.y)?;
        ::std::write!(f, " }}")?;
        ::std::result::Result::Ok(())
    }
}
